<resources>
    <string name="app_name">COMMOV TP1</string>
    <string name="title_activity_inicial" translatable="false">Inicial</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>


    <string name="notas">Notas</string>

    <string name="adicionar_notas">Adicionar Nota</string>
    <string name="guardar">Guardar</string>

    <string name="hint_word" translatable="false">Word...</string>
    <string name="button_save">Guardar</string>
    <string name="empty_not_saved">Nota não foi guardada, campos vazios </string>
    <string name="add_word">Add word</string>

    <string name="insertTitulo">Inserir Título</string>
    <string name="insertDescricao">Inserir Descricao</string>
    <string name="editar_nota">Editar Nota</string>
    <string name="apagar_nota">Apagar Nota</string>
    <string name="mensagem_apagar">Deseja apagar a Nota? </string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="adicionar_nota">Criar Nota</string>
    <string name="naoexiste">Não existe esse utilizador!</string>
    <string name="passErrada">Palavra-Passe Errada!</string>
    <string name="campoutilizador">Campo Utilizador vazio</string>
    <string name="campopassword">Campo Password vazio</string>
    <string name="Problemas">Problemas</string>

    <string name="fotoProb">Inserir Foto</string>
    <string name="Add_nota">Adicionar nota</string>
    <string name="Add_Problema">Adicionar Problema</string>
    <string name="InsertLong">Inserir Longitude</string>
    <string name="insertLat">Inserir latitude</string>
    <string name="coords">Coordenadas</string>
    <string name="TipoProb">Inserir Tipo</string>

    <string-array name="tipoProb">
        <item>obras</item>
        <item>acidente</item>
        <item>buracos</item>
        <item>estrada fechada</item>
        <item>engarrafamento</item>
    </string-array>

    <string name="preference_file_key" translatable="false">file1</string>
    <string name="button" translatable="false">false</string>
    <string name="username" translatable="false">username</string>
    <string name="password" translatable="false">password</string>
    <string name="my_account">A minha conta</string>
    <string name="home" translatable="false">Home</string>
    <string name="logout" translatable="false">Log Out</string>
    <string name="Bemvindo">"Bem Vindo "</string>

    <string name="title_activity_mapa" translatable="false">Map</string>
    <string name="title_activity_nav_app" translatable="false">NavApp</string>
    <string name="Editarproblema">Editar Problema</string>
    <string name="msgTitulo">Apagar Problema</string>
    <string name="msgApagar">Deseja apagar o problema?</string>
    <string name="filtros">Filtros</string>
    <string name="_500m" translatable="false">500M</string>
    <string name="_1000m" translatable="false">1000M</string>
    <string name="_1500m" translatable="false">1500M</string>
    <string name="TipoProblema">Por Tipo</string>
    <string name="Distancias">Por Distância</string>
    <string name="obras">obras</string>
    <string name="engarrafamento">Engarrafamento</string>
    <string name="Buraco">Buraco</string>
    <string name="estradaf">Estrada Fechada</string>
    <string name="Acidente">Acidente</string>
    <string name="markerdefault" translatable="false">Default</string>
    <string name="guardar_utilizador">Guardar utilizador</string>
    <string name="inserir_username">Inserir Username</string>
    <string name="inserir_password">Inserir Password</string>
    <string name="apagar_marker">Apagar Problema</string>
    <string name="mensagem_apagarProblema">Deseja apagar o Problema?</string>
    <string name="TipoProbview">Tipo de Problema</string>
    <string name="VerProblema">Ver Problema</string>
    <string name="addtit">Campo titulo vazio</string>
    <string name="addDes">Campo Descrição vazio</string>
    <string name="addLa">Campo Latitude vazio</string>
    <string name="addLon">Campo longitude vazio</string>

</resources>