<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/my_account">
        <menu>
            <item
                android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/ic_baseline_home_24"
                />
            <item
                android:id="@+id/Problemas"
                android:title="@string/Problemas"
                android:icon="@drawable/ic_baseline_report_problem_24"
                />
            <item
                android:id="@+id/Notas"
                android:title="@string/notas"
                android:icon="@drawable/ic_baseline_note_24"
                />
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                />
        </menu>
    </item>
</menu>