<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProblema"
    android:background="@drawable/novo_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="390dp"
                android:layout_height="74dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="23dp"

                android:layout_marginEnd="159dp"
                android:layout_marginRight="159dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/Add_Problema"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/buttonLabel"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/tituloedit"
                android:layout_width="397dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/insertTitulo"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/descricaoedit"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/insertDescricao"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/longitudeedit"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/InsertLong"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/latitudeedit"
                android:layout_width="376dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/insertLat"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/coordenadasedit"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/coords" />

            <TextView
                android:id="@+id/textView2edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/TipoProb"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner2edit"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:entries="@array/tipoProb" />

            <Button
                android:id="@+id/imagemedit"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/fotoProb" />

            <ImageView
                android:id="@+id/imageViewedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/guardar1edit"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:text="@string/guardar" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

