<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Editar">

        <EditText
            android:id="@+id/titulo"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/country"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/insertTitulo"
            android:inputType="textAutoComplete"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/descricao"
            android:layout_width="341dp"
            android:layout_height="363dp"
            android:layout_above="@+id/button_save"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="66dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/insertDescricao"
            android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/guardar"
        app:rippleColor="@color/purple_700" />

</RelativeLayout>

