<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        android:id="@+id/fundo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/gradientcompleto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/username"
        android:layout_width="297dp"
        android:layout_height="39dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="280dp"
        android:ems="10"
        android:hint="@string/inserir_username"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="128dp"
        android:layout_height="76dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="116dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Notasl"
        android:layout_width="128dp"
        android:layout_height="76dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="16dp"
        android:text="@string/notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="293dp"
        android:layout_height="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="224dp"
        android:ems="10"
        android:hint="@string/inserir_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/loginischecked"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:text="@string/guardar_utilizador"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login" />

    <ImageView
        android:id="@+id/fundbranco"
        android:layout_width="296dp"
        android:layout_height="320dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/fundo"
        app:layout_constraintEnd_toEndOf="@+id/fundo"
        app:layout_constraintStart_toStartOf="@+id/fundo"
        app:layout_constraintTop_toTopOf="@+id/fundo"
        app:layout_constraintVertical_bias="0.065" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splash1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_url="https://assets3.lottiefiles.com/packages/lf20_HqofMq.json" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="185dp"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="384dp"
        android:text="Login"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>